--- a/.github/workflows/python-workflow.yml
+++ b/.github/workflows/python-workflow.yml
@@ -13,9 +13,9 @@ jobs:
       with:
         python-version: 3.11
     - name: Checkout
-      run: actions/checkout@main
-
+      uses: actions/checkout@main
     - name: Install dependencies
       run: |
         pip install -r requirements.txt
+
 
